# scb_app_openAI

./: .~lock.CFSLoadingTemplate-VZOR -VČETNĚ českých výkazů 1810 2024.xlsx#  CFSLoadingTemplate-VZOR -VČETNĚ českých výkazů 1810 2024.xlsx  README.md  db.sqlite3  hint  manage.py  pyproject.toml
company/: admin.py  forms.py  models.py  urls.py  views.py
company/migrations/: 0001_initial.py
dashboard/: urls.py  utils.py  views.py
dashboard/templatetags/: dict_extras.py
dashboard/teplatetags/: json_extras.py
financials/: admin.py  models.py
financials/migrations/: 0001_initial.py
hodnoty/: apps.py  urls.py  views.py
hodnoty/templatetags/: get_item.py
ingestion/: admin.py  forms.py  models.py  openai_parser.py  urls.py  utils.py  views.py
ingestion/migrations/: 0001_initial.py  0002_document_doc_type_document_owner_and_more.py  0002_extractedrow_label_and_more.py  0003_remove_document_statement_date.py
ingestion/templatetags/: dict_utils.py
scb/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
suropen/: apps.py  models.py  urls.py  views.py
suropen/migrations/: 0001_initial.py
survey/: admin.py  models.py  urls.py  views.py
survey/migrations/: 0001_initial.py
templates/: base.html  home.html  login.html  signup.html
templates/company/: company_form.html  success.html
templates/dashboard/: index.html  metrics.html  profitability.html  report.html
templates/ingestion/: confirm_delete.html  confirm_overwrite.html  document_detail.html  documents.html  table_detail.html  upload.html
templatetags/: extras.py
(+13 files in other folders)
